--- a/css/main.scss
+++ b/css/main.scss
@@ -81,6 +81,7 @@ body{
         $beige 15px,
         $beige 30px
     );
+    border-bottom:50px solid $headerpink;
 }
 .sewchic-home-body-padding{
     background: $beige;
@@ -127,9 +128,6 @@ body{
 
 
 @media screen and (min-width: 768px){
-    .sewchic-header-pink{
-        border-top: 75px solid $headerpink;
-    }
     .sewchic-header-widget-container{
         h3{
             margin: 3px auto;
@@ -189,7 +187,7 @@ body{
 
 @media screen and (min-width: 1200px){
     #sewchic-home-tower-img{
-        margin-top: -175px;
+        margin-top: -75px;
         height: 800px;
     }
 
