--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -179,22 +179,21 @@ body{
         li.menu-item{
             margin-right: 10px;
             position:relative;
+            ul.sub-menu{
+                position:absolute;
+                left: -99999px;
+            }
+            &:hover a{
+                text-decoration:none;
+            }
+            &:hover ul.sub-menu{
+                left:0px;
+                background:$headerpink;
+                margin:-5px 0 0 0;
+                padding:10px;
+                z-index:10;
+            }
         }
-        li.menu-item ul.sub-menu{
-            position:absolute;
-            left: -99999px;
-        }
-        li.menu-item:hover a{
-            text-decoration:none;
-        }
-        li.menu-item:hover ul.sub-menu{
-            left:0px;
-            background:$headerpink;
-            margin:-5px 0 0 0;
-            padding:10px;
-            z-index:10;
-        }
-
     }
     .big-text-sm{
         font-size:28px;
