--- a/css/sass/facebook-plugin.scss
+++ b/css/sass/facebook-plugin.scss
@@ -5,6 +5,7 @@
     height:0;
     padding-top:30px;
     width:100%;
+    overflow:hidden;
     /* max-width and padding-bottom rendered in php */
     iframe{
         height: 100% !important;
