front page feeds and styling complete

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -4,5 +4,6 @@ $headerpink : #fbdedd;
 $beige : #fbfae7;
 $black : #222;
 $light-grey: #aeaeae;
+$light-purple: #fff2ff;
 $navbarIconBars: #bbb;
 $navbarToggleBg: #ddd;
