--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -170,7 +170,16 @@ body{
 }
 
 .sewchic-post{
-    background: grey;
+    display:block;
+    background-color: $light-purple;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size:cover;
+    background-origin:border-box;
+    opacity:1;
+    transition:opacity .5s;
+    -webkit-transition:opacity .5s;
+
     text-align:right;
     position:relative;
     &.sewchic-post-large{
@@ -180,11 +189,17 @@ body{
         height:242px;
         margin-top:16px;
     }
+    &:hover{
+        opacity:0.5;
+        filter: alpha(opacity=50);
+    }
     .sewchic-post-title{
+        border:white solid 1px;
+        background-color:rgba(255,255,255,0.75);
         padding:10px 15px;
         position:absolute;
-        bottom: 0;
-        right:0;
+        bottom: 10px;
+        right:10px;
     }
 
 }
