style woocommerce product gallery

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -4,6 +4,8 @@ $headerpink : #fbdedd;
 $beige : #fbfae7;
 $black : #222;
 $light-grey: #aeaeae;
+$lighter-grey: #efefef;
 $light-purple: #fff2ff;
 $navbarIconBars: #bbb;
 $navbarToggleBg: #ddd;
+$saleRed:#de0000;
