--- a/style.css
+++ b/style.css
@@ -9,4 +9,5 @@
  * TODO: RESEARCH THE LICENSES AND TAGS ELEMENTS OF THIS THING
  */
 
+@import url('css/woocommerce.css');
 @import url('css/main.css');
