single product page styled through from gallery to tabs

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -9,3 +9,6 @@ $light-purple: #fff2ff;
 $navbarIconBars: #bbb;
 $navbarToggleBg: #ddd;
 $saleRed:#de0000;
+$priceGreen:#00ae00;
+$addToCartBlue: #ced0ff;
+$addToCartBlue2: #878ac1;
