--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -27,11 +27,11 @@ span.onsale {
 .woocommerce-product-gallery .flex-viewport {
   width: 100%;
   margin: auto;
-  max-width: 600px; }
+  max-width: 500px; }
 .woocommerce-product-gallery ol.flex-control-nav {
   width: 100%;
   margin: auto;
-  max-width: 600px;
+  max-width: 500px;
   list-style-type: none;
   padding: 0;
   text-align: center; }
@@ -39,6 +39,94 @@ span.onsale {
     max-width: 100px;
     display: inline-block;
     padding: 10px; }
+
+.entry-summary .price {
+  margin: 10px;
+  font-weight: bold;
+  font-size: 24px;
+  color: #00ae00; }
+
+.wcsc-cart-add-form .quantity-wrapper {
+  padding: 10px;
+  border: 2px solid #fbdedd;
+  max-width: 350px;
+  margin: auto;
+  width: 90%;
+  text-align: center; }
+  .wcsc-cart-add-form .quantity-wrapper div, .wcsc-cart-add-form .quantity-wrapper button, .wcsc-cart-add-form .quantity-wrapper input {
+    display: inline-block; }
+.wcsc-cart-add-form .input-text {
+  width: 100%;
+  max-width: 150px;
+  height: 39px;
+  padding: 6px 12px;
+  font-size: 16px;
+  line-height: 1em;
+  background-color: white;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
+.wcsc-cart-add-form .button {
+  background-color: #fbfae7;
+  background-repeat: repeat-x;
+  border-radius: 4px;
+  background-image: linear-gradient(to bottom, #efefef 0, #aeaeae 100%);
+  border: 1px solid transparent;
+  color: black;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  -ms-touch-action: manipulation;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; }
+
+.product-meta::after {
+  content: ".";
+  visibility: hidden;
+  clear: both;
+  line-height: 0;
+  height: 0;
+  display: block; }
+
+.wc-tabs-wrapper {
+  clear: both; }
+  .wc-tabs-wrapper ul.tabs {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 18px;
+    border-bottom: 10px #aeaeae solid; }
+    .wc-tabs-wrapper ul.tabs li {
+      display: inline;
+      margin: 0 5px; }
+      .wc-tabs-wrapper ul.tabs li a {
+        padding: 20px 15px;
+        background-color: white;
+        border: 1px solid #aeaeae;
+        color: black; }
+      .wc-tabs-wrapper ul.tabs li a:hover {
+        text-decoration: none;
+        background-color: #aeaeae;
+        color: white; }
+    .wc-tabs-wrapper ul.tabs li:first-of-type {
+      margin: 0 5px 0 0; }
+    .wc-tabs-wrapper ul.tabs li.active a {
+      background-color: #aeaeae;
+      color: white; }
+
+.woocommerce-Tabs-panel {
+  box-shadow: 0 1px 1px transparent; }
 
 .related.products {
   clear: both; }
@@ -48,8 +136,17 @@ span.onsale {
   .woocommerce-breadcrumb {
     display: block; }
 
-  .woocommerce-product-gallery ol.flex-control-nav li {
-    max-width: 200px; } }
+  .wcsc-cart-add-form {
+    margin: 20px 0; }
+    .wcsc-cart-add-form .quantity-wrapper {
+      max-width: initial;
+      margin: initial;
+      width: initial;
+      text-align: left;
+      display: inline;
+      padding: 15px 12px 17px; }
+    .wcsc-cart-add-form .input-text {
+      max-width: 400px; } }
 @media screen and (min-width: 992px) {
   .woocommerce-product-gallery {
     float: left;
