--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -49,6 +49,7 @@ span.onsale {
 .wcsc-cart-add-form .quantity-wrapper {
   padding: 10px;
   border: 2px solid #fbdedd;
+  border-radius: 5px;
   max-width: 350px;
   margin: auto;
   width: 90%;
@@ -91,16 +92,25 @@ span.onsale {
   -moz-user-select: none;
   -ms-user-select: none; }
 
-.product-meta::after {
-  content: ".";
-  visibility: hidden;
-  clear: both;
-  line-height: 0;
-  height: 0;
-  display: block; }
+.product_meta {
+  margin: 15px 0 10px;
+  font-size: 14px; }
+  .product_meta, .product_meta a {
+    color: #aeaeae;
+    font-style: italic; }
+  .product_meta a {
+    text-decoration: underline; }
+  .product_meta::after {
+    content: ".";
+    visibility: hidden;
+    clear: both;
+    line-height: 0;
+    height: 0;
+    display: block; }
 
 .wc-tabs-wrapper {
-  clear: both; }
+  clear: both;
+  padding-top: 35px; }
   .wc-tabs-wrapper ul.tabs {
     list-style-type: none;
     margin: 0;
@@ -114,7 +124,9 @@ span.onsale {
         padding: 20px 15px;
         background-color: white;
         border: 1px solid #aeaeae;
-        color: black; }
+        color: black;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px; }
       .wc-tabs-wrapper ul.tabs li a:hover {
         text-decoration: none;
         background-color: #aeaeae;
