product page styled through comment form ... only remains related products

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -9,6 +9,8 @@ $light-purple: #fff2ff;
 $navbarIconBars: #bbb;
 $navbarToggleBg: #ddd;
 $saleRed:#de0000;
+$requiredRed:#a00;
 $priceGreen:#00ae00;
 $addToCartBlue: #ced0ff;
 $addToCartBlue2: #878ac1;
+
